--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -9,7 +9,7 @@
             </a>
             <br />
 	    </td>
-        <td>
+        <td style="background: #f00; font-size: 14px; font-weight: bold; padding: 5px; border-radius: 50%">
             Super Kommentar
         </td>
     </tr>
