Final Steckbrief styling (annoying)

--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -9,8 +9,8 @@
             </a>
             <br />
 	    </td>
-        <td style="background: #f00; font-size: 14px; font-weight: bold; padding: 5px; border-radius: 50%">
-            Super Kommentar
+        <td style="background: #f00; font-size: 14px; font-weight: bold; padding: 5px; border-radius: 25%; text-align: center; color: silver; border: 1px solid #000; width: 280px">
+            Wer kam ursprünglich auf die Idee, programmieren als Kunst zu betiteln? Sehr fragwürdig
         </td>
     </tr>
 </table>
