Redesign of Steckbrief(test)

--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -4,10 +4,18 @@
 <table width="100%" height="100%" border="0" cellpadding="2" cellspacing="0">
     <tr>
         <td width="200">
-	        <a href="https://github.com/FelixSD/Softwaredesign" target="_blank" rel="nofollow" style="color: #f00; background: #000; font-weight: bold" title="Meine GitHub Repositories">
-                >> Zu den Repositories
-            </a>
-            <br />
+            <ol>
+                <li>
+                    <a href="https://github.com/FelixSD/Softwaredesign" target="_blank" rel="nofollow" style="color: #f00; background: #000; font-weight: bold" title="Meine GitHub Steckbrief">
+                        Zu meinem Steckbrief
+                    </a>
+                </li>
+                <li>
+                    <a href="https://github.com/FelixSD/Task1" target="_blank" rel="nofollow" style="color: #f00; background: #000; font-weight: bold" title="Aufgabe Nr.1">
+                        SourceControl(1)
+                    </a>
+                </li>
+            </ol>
 	    </td>
         <td style="background: #f00; font-size: 14px; font-weight: bold; padding: 5px; border-radius: 25%; text-align: center; color: silver; border: 5px solid #000; width: 280px">
             Wer kam ursprünglich auf die Idee, programmieren als Kunst zu betiteln? Sehr fragwürdig
