Steckbrief fixes (final verision)

--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -6,18 +6,18 @@
         <td width="200">
             <ol>
                 <li>
-                    <a href="https://github.com/FelixSD/Softwaredesign" target="_blank" rel="nofollow" style="color: #f00; background: #000; font-weight: bold" title="Meine GitHub Steckbrief">
+                    <a href="https://github.com/FelixSD/Softwaredesign" target="_blank" rel="nofollow" style="color: #f00; font-weight: bold" title="Meine GitHub Steckbrief">
                         Zu meinem Steckbrief
                     </a>
                 </li>
                 <li>
-                    <a href="https://github.com/FelixSD/Task1" target="_blank" rel="nofollow" style="color: #f00; background: #000; font-weight: bold" title="Aufgabe Nr.1">
+                    <a href="https://github.com/FelixSD/Task1" target="_blank" rel="nofollow" style="color: #f00; font-weight: bold" title="Aufgabe Nr.1">
                         SourceControl(1)
                     </a>
                 </li>
             </ol>
 	    </td>
-        <td style="background: #f00; font-size: 14px; font-weight: bold; padding: 5px; border-radius: 25%; text-align: center; color: silver; border: 5px solid #000; width: 280px">
+        <td style="background: #f00; font-size: 12px; font-weight: bold; padding: 5px; border-radius: 25%; text-align: center; color: silver; border: 5px solid #000; width: 150px">
             Wer kam ursprünglich auf die Idee, programmieren als Kunst zu betiteln? Sehr fragwürdig
         </td>
     </tr>
