Adjusting file to new finshed task(2)

--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -15,9 +15,14 @@
                         SourceControl(1)
                     </a>
                 </li>
+                <li>
+                    <a href="https://github.com/FelixSD/Task2" target="_blank" rel="nofollow" style="color: #f00; font-weight: bold" title="Aufgabe Nr.2">
+                        Programmieren in C#_1(2)
+                    </a>
+                </li>
             </ol>
 	    </td>
-        <td style="background: #f00; font-size: 12px; font-weight: bold; padding: 5px; border-radius: 25%; text-align: center; color: silver; border: 5px solid #000; width: 150px">
+        <td style="background: #f00; font-size: 12px; font-weight: bold; padding: 5px; border-radius: 25%; text-align: center; color: silver; border: 5px solid #000; width: 120px">
             Wer kam ursprünglich auf die Idee, programmieren als Kunst zu betiteln? Sehr fragwürdig
         </td>
     </tr>
