Update of Steckbrief

--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -20,9 +20,14 @@
                         Programmieren in C#_1(2)
                     </a>
                 </li>
+                <li>
+                    <a href="https://github.com/FelixSD/Buchstabendreher" target="_blank" rel="nofollow" style="color: #f00; font-weight: bold" title="Zusatzaufgabe Nr.1">
+                        Zusatzaufgabe Nr.1 (Buchstabendreher)
+                    </a>
+                </li>
             </ol>
 	    </td>
-        <td style="background: #f00; font-size: 12px; font-weight: bold; padding: 5px; border-radius: 25%; text-align: center; color: silver; border: 5px solid #000; width: 120px">
+        <td style="background: #f00; font-size: 11px; font-weight: bold; padding: 5px; border-radius: 25%; text-align: center; color: silver; border: 5px solid #000; width: 110px">
             Wer kam ursprünglich auf die Idee, programmieren als Kunst zu betiteln? Sehr fragwürdig
         </td>
     </tr>
