--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -25,6 +25,11 @@
                         Zusatzaufgabe Nr.1 (Buchstabendreher)
                     </a>
                 </li>
+                <li>
+                    <a href="https://github.com/FelixSD/Task3" target="_blank" rel="nofollow" style="color: #f00; font-weight: bold" title="Aufgabe Nr.3">
+                        Debugging(3)
+                    </a>
+                </li>
             </ol>
 	    </td>
         <td style="background: #f00; font-size: 11px; font-weight: bold; padding: 5px; border-radius: 25%; text-align: center; color: silver; border: 5px solid #000; width: 110px">
