--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -35,6 +35,11 @@
                         UML(5)
                     </a>
                 </li>
+                <li>
+                    <a href="https://github.com/FelixSD/TicTacToeUML" target="_blank" rel="nofollow" style="color: #f00; font-weight: bold" title="Zusatzaufgabe Nr.2">
+                        Zusatzaufgabe Nr.2 (TicTacToe)
+                    </a>
+                </li>
             </ol>
 	    </td>
         <td style="background: #f00; font-size: 11px; font-weight: bold; padding: 5px; border-radius: 25%; text-align: center; color: silver; border: 5px solid #000; width: 110px">
