--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -40,6 +40,11 @@
                         Zusatzaufgabe Nr.2 (TicTacToe)
                     </a>
                 </li>
+                <li>
+                    <a href="https://github.com/FelixSD/Programmieren_cs2" target="_blank" rel="nofollow" style="color: #f00; font-weight: bold" title="Aufgabe Nr. 6">
+                        Programmieren in C#_2(6)
+                    </a>
+                </li>
             </ol>
 	    </td>
         <td style="background: #f00; font-size: 11px; font-weight: bold; padding: 5px; border-radius: 25%; text-align: center; color: silver; border: 5px solid #000; width: 110px">
