--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -45,9 +45,14 @@
                         Programmieren in C#_2(6)
                     </a>
                 </li>
+                <li>
+                    <a href="https://github.com/FelixSD/Quiz" target="_blank" rel="nofollow" style="color: #f00; font-weight: bold" title="Zusatzaufgabe Nr. 7">
+                        Zusatzaufgabe Nr.3 (Quiz)
+                    </a>
+                </li>
             </ol>
 	    </td>
-        <td style="background: #f00; font-size: 11px; font-weight: bold; padding: 5px; border-radius: 25%; text-align: center; color: silver; border: 5px solid #000; width: 110px">
+        <td style="background: #f00; font-size: 11px; font-weight: bold; padding: 5px; border-radius: 25%; text-align: center; color: silver; border: 5px solid #000; width: 110px; height: 200px;">
             Wer kam ursprünglich auf die Idee, programmieren als Kunst zu betiteln? Sehr fragwürdig
         </td>
     </tr>
