--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -60,10 +60,12 @@
                         Zusatzaufgabe Nr.9 (Iterators)
                     </a>
                 </li>
+                <li>
+                    <a href="https://github.com/FelixSD/External-Quiz" target="_blank" rel="nofollow" style="color: #f00; font-weight: bold" title="Zusatzaufgabe Nr. 10">
+                        Zusatzaufgabe Nr.10 (Quiz mit ausgelagertem XML-File)
+                    </a>
+                </li>
             </ol>
 	    </td>
-        <td style="background: #f00; font-size: 11px; font-weight: bold; padding: 5px; border-radius: 25%; text-align: center; color: silver; border: 5px solid #000; width: 110px; max-height: 200px;">
-            Wer kam ursprünglich auf die Idee, programmieren als Kunst zu betiteln? Sehr fragwürdig
-        </td>
     </tr>
 </table>
